Revision history for FusionInventory agent

2.5.2 not released yet

core:
* fix HTTP server IPv6 support as HTTP::Daemon module now supports IPv6 natively
* Always compile IPv4 address as IPv6 too for trusted ips. This is needed when
  system default is to listen other IPv6 or you set httpd-ip to IPv6 address
  like '::' or '::1'.

inventory:
* unix: fix last log user after a reboot
* added Samsung monitor serial support for models: B1940MR, B1940W, S22A450BW,
  S22B420, S22E450, S22F350FHU, S27D390H, S27D850T, S27H850QFU, S19A450, SM943BM,
  S22C450, S27H650FDU
* macosx:
 - fix monitors inventory using ioreg as it provides EDID block from monitors
 - fix few perl error messages on exotic cases
* win32: fix hyperv host wasn't filtered from installed virtual machines
* win32: fix Adobe key detection, thanks to PR-gh
* Megacli storage support update, thanks to po1vo
* linux: Added macvlan/docker network interfaces support, thanks to po1vo
* win32: fix firewall inventory cases, thanks to PR-gh
* win32: fix Office license inventory, thanks to PR-gh
* win32: enhanced network card inventory, thanks to PR-gh
* linux: provides debian installed software filesize in bytes
* linux: Added support for installed softwares by Snap

netdiscovery/netinventory:
* linux: avoid to share HTTP client with threads to fix RHEL/CentOS 7 crash
* Add Tagged VLAN, work at least with HPE Switch, thanks to PR-gh
* Enhanced Qlogic support to report device serial number, thanks to po1vo
* Added StormShield support via FreeBSD MIBSupport, thanks to PR-gh
* Fix memory and storage size normalization in some cases, thanks to PR-gh
* fix #738: fix time expiration when netinventory is chained with netdiscovery
  while using fusioninventory-netdiscovery script --inventory option
* fix #741: device with empty description was no more inventoried

2.5.1 Tue, 02 Jul 2019

core:
* build: fix fusioninventory-remoteinventory was not installed
* fix HTTP server plugins base configuration folder